<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_orders"
        android:icon="@drawable/ic_restaurant"
        android:title="@string/my_orders"></item>

    <item
        android:id="@+id/menu_reservation"
        android:icon="@drawable/ic_booked"
        android:title="@string/my_reservations"></item>


    <item
        android:id="@+id/myAddress"
        android:icon="@drawable/ic_address_book"
        android:title="@string/my_addresses"></item>


    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/ic_favorite1"
        android:title="@string/favorites"></item>

    <item
        android:id="@+id/menu_messages"
        android:icon="@drawable/ic_fav_fill"
        android:title="@string/messages"></item>

    <item
        android:id="@+id/menu_report_problem"
        android:icon="@drawable/ic_warning"
        android:title="@string/report_problem"></item>

    <item
        android:id="@+id/menu_customer_service"
        android:icon="@drawable/ic_headset"
        android:title="@string/customer_service"></item>
</menu>