<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/location_ms"
            android:textColor="#5D5F63"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/selector_loction_dialog_button"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@drawable/selecor_text_location_button"
            app:layout_constraintEnd_toStartOf="@id/btn_yes"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/selector_loction_dialog_button"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@drawable/selecor_text_location_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>