<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_bk">


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_sign_up_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_back"
        style="@style/btnBack_default"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_verifyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:gravity="center"
        android:text="@string/verfication_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pin_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:hint="@string/pin_code"
        android:theme="@style/textInputLayout_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verifyTitle">


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_pinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/signUpBtn"
        android:text="@string/countinue"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/til_pin_code"
        app:layout_constraintStart_toStartOf="@id/til_pin_code"
        app:layout_constraintTop_toBottomOf="@id/til_pin_code" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_reSendCode"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendcode"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>