<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.address.AddressInformationActivity">

    <include layout="@layout/toolbar_light"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"/>
    
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/btn_addAddress"
        android:id="@+id/scrollView"
        android:padding="@dimen/_15sdp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_addressNameTitle"
                android:text="@string/address_name"
                android:textSize="@dimen/_12ssp"
                />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_addressNameTitle"
                android:id="@+id/et_addressName"/>


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_addressName"
                android:id="@+id/tv_phoneTitle"
                android:text="@string/phone_hint"
                android:textSize="@dimen/_12ssp"
                />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_phoneTitle"
                android:id="@+id/et_phone"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phone"
                android:id="@+id/tv_buildingNumTitle"
                android:text="@string/building_num"
                android:textSize="@dimen/_12ssp"
                />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_buildingNumTitle"
                android:id="@+id/et_buildingNum"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_buildingNum"
                android:id="@+id/tv_floorNumTitle"
                android:text="@string/floor_num"
                android:textSize="@dimen/_12ssp"
                />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_floorNumTitle"
                android:id="@+id/et_floorNum"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_floorNum"
                android:id="@+id/tv_apartmentNumTitle"
                android:text="@string/apartment_num"
                android:textSize="@dimen/_12ssp"
                />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_apartmentNumTitle"
                android:id="@+id/et_appartmentNum"/>



        </android.support.constraint.ConstraintLayout>

    </ScrollView>


    <android.support.v7.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btn_addAddress"
        android:text="@string/add_addresss"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/signUpBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"/>



</android.support.constraint.ConstraintLayout>